Fixed vertical overflow

--- a/styles.scss
+++ b/styles.scss
@@ -28,7 +28,7 @@ a, .logo-regular, .logo-header {
 
 .grid-container {
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 16px);
     display: grid;
 }
 
@@ -189,7 +189,7 @@ a, .logo-regular, .logo-header {
 
 .form-container {
     color: $subdued-black;
-    height: 100%;
+    height: calc(100% - 24px);
     margin: 30px 0 0 40px;
 
     display: grid;
